App is already back to working in local(minus Yahoo server)!

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "hindsightinvesting",
+  "description": "An excercise to learn angular development and how to deploy to Heroku",
   "version": "0.0.0",
   "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
@@ -10,6 +10,13 @@
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "html5-boilerplate": "^5.3.0",
+    "angular-bootstrap": "^1.2.5",
+    "bootstrap": "^3.3.6",
+    "angular-chart.js": "^0.9.0",
+    "angular-material": "^1.0.8"
+  },
+  "resolutions": {
+    "angular": ">=1.4.0"
   }
 }
