--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.7.7",
-    "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
@@ -17,7 +15,7 @@
     "protractor": "^4.0.9"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower install",
+    "postinstall": "bower install",
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
     "pretest": "npm install",
@@ -31,6 +29,10 @@
   },
   "dependencies": {
     "bower": "^1.7.9",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "http-server": "^0.9.0",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
+    "request": "^2.70.0"
   }
 }
